update CS286CazymesGridSearch.ipynb and README.me

--- a/CS286CazymesGridSearch.ipynb
+++ b/CS286CazymesGridSearch.ipynb
@@ -26,6 +26,9 @@
         "outputId": "2cd6a8b7-27db-4bf1-ad39-81d823dca0af"
       },
       "source": [
+        "# CS 286 Project Spring 2021 under Professor  \n",
+        "#\n",
+        "# David Bui and Sushant Mane\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -71,32 +74,32 @@
         "outputId": "15cdb51e-e94c-4182-8233-3f47226e487c"
       },
       "source": [
+        "# To run must go through folder and uncomment certain blocks of code\n",
+        "# basePath in drive should be changed according to how folders are placed \n",
+        "basePath = '/content/drive/MyDrive/286Project/'\n",
         "\n",
         "# sequence fasta file folders\n",
-        "avicel_folder = '/content/drive/MyDrive/286Project/fastaAvicel'\n",
-        "cmc_folder = '/content/drive/MyDrive/286Project/fastaCMC'\n",
-        "lich_folder = '/content/drive/MyDrive/286Project/fastaLichenan'\n",
-        "miscanthus_folder = '/content/drive/MyDrive/286Project/fastaMiscanthus'\n",
-        "switchgrass_folder = '/content/drive/MyDrive/286Project/fastaSwitchgrass'\n",
-        "xylan_folder = '/content/drive/MyDrive/286Project/fastaXylan'\n",
+        "no_react_folder = basePath + 'fastaNoReaction'\n",
+        "avicel_folder = basePath + 'fastaAvicel'\n",
+        "cmc_folder = basePath + 'fastaCMC'\n",
+        "lich_folder = basePath + 'fastaLichenan'\n",
+        "miscanthus_folder = basePath + 'fastaMiscanthus'\n",
+        "switchgrass_folder = basePath 'fastaSwitchgrass'\n",
+        "xylan_folder = basePath + 'fastaXylan'\n",
         "\n",
         "# folders containing sequences that did not react to the substrate in name\n",
-        "avicel_not_folder = '/content/drive/MyDrive/286Project/fastaAvicelNot'\n",
-        "cmc_not_folder = '/content/drive/MyDrive/286Project/fastaCMCNot'\n",
-        "lich_not_folder = '/content/drive/MyDrive/286Project/fastaLichenanNot'\n",
-        "miscanthus_not_folder = '/content/drive/MyDrive/286Project/fastaMiscanthusNot'\n",
-        "switchgrass_not_folder = '/content/drive/MyDrive/286Project/fastaSwitchgrassNot'\n",
-        "xylan_not_folder = '/content/drive/MyDrive/286Project/fastaXylanNot'\n",
+        "no_react_not_folder = basePath + '/content/drive/MyDrive/286Project/fastaNoReactionNot'\n",
+        "avicel_not_folder = basePath + 'fastaAvicelNot'\n",
+        "cmc_not_folder = basePath + 'fastaCMCNot'\n",
+        "lich_not_folder = basePath + 'fastaLichenanNot'\n",
+        "miscanthus_not_folder = basePath + 'fastaMiscanthusNot'\n",
+        "switchgrass_not_folder = basePath + 'fastaSwitchgrassNot'\n",
+        "xylan_not_folder = basePath + 'fastaXylanNot'\n",
         "\n",
-        "no_react_folder = '/content/drive/MyDrive/286Project/fastaNoReaction'\n",
-        "no_react_not_folder = '/content/drive/MyDrive/286Project/fastaNoReactionNot'\n",
-        "\n",
-        "savePath = '/content/drive/MyDrive/mlp_cmc_model.sav' # path to save mlp models\n",
-        "\n",
-        "mlpFilePath = '/content/drive/MyDrive/286Project/goodModelSaves/mlp_model.sav' # contains lichenan and no reaction folder model\n",
-        "mlp882 = '/content/drive/MyDrive/286Project/goodModelSaves/mlp_model882.sav' # contains lichenan and not lichenan, and no reaction model\n",
+        "savePath = basePath + 'mlp_cmc_model.sav' # path to save mlp models\n",
         "\n",
         "\n",
+        "# uncomment one pair below train whichever model or substrate focus\n",
         "folders_to_classify = []\n",
         "\n",
         "# folders_to_classify.append(no_react_folder)\n",
@@ -121,9 +124,8 @@
         "# folders_to_classify.append(xylan_not_folder)\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
+        "# functions below are for parsing and adding the sequences in each fasta file\n",
+        "# to a pandas dataframe\n",
         "\n",
         "#\n",
         "# Parse files and add to a id# -> sequence dictionary IDToSequence\n",
@@ -357,12 +359,12 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_cazy, \n",
         "                                                    y_data, \n",
-        "                                                    test_size = 0.25, random_state = 41) #random_state = 42\n",
+        "                                                    test_size = 0.25, random_state = 42) \n",
         "\n",
-        "print(\"TRAINING X train and y train\")\n",
+        "print(\"TRAINING X train and y train shape\")\n",
         "print(X_train.shape)\n",
         "print(y_train.shape)\n",
-        "print(\"TESTING X test and y test\")\n",
+        "print(\"TESTING X test and y test shape\")\n",
         "print(X_test.shape)\n",
         "print(y_test.shape)"
       ],
@@ -392,7 +394,7 @@
         "outputId": "bc0aa15f-04b7-4ee6-dccf-5c05bd1aafba"
       },
       "source": [
-        "# The alpha parameter was determined by grid search previously\n",
+        "# various tested ML models\n",
         "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
         "from sklearn.model_selection import ParameterGrid\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
@@ -407,59 +409,30 @@
         "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
+        "# Best mlp models found through grid search uncomment depending on \n",
         "\n",
+        "# # no reaction enzymes and enzymes with any reactions: 1.00 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='adaptive', max_iter=1000000, solver='lbfgs', shuffle=False)\n",
         "\n",
-        "# classifier = MultinomialNB(alpha=0)\n",
+        "# # enzymes with avicel versus no avicel reactions 0.917: accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
         "\n",
-        "no reaction enzymes and enzymes with any reactions: 1.00 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='adaptive', max_iter=1000000, solver='lbfgs', shuffle=False)\n",
+        "# # enzymes with cmc versus no cmc reactions: 0.8333 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(20,20,20), learning_rate='adaptive', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
         "\n",
-        "enzymes with avicel versus no avicel reactions 0.917: accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
+        "# # enzymes with lich versus not lich reactions: 1.000 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
         "\n",
-        "enzymes with cmc versus no cmc reactions: 0.8333 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(20,20,20), learning_rate='adaptive', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
+        "# # enzymes with miscanthus versus no miscanthus reactions 0.857 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
         "\n",
-        "enzymes with lich versus not lich reactions: 1.000 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
+        "# # enzymes with switchgrass versus  no switchgrass reactions:  0.857 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
         "\n",
-        "enzymes with miscanthus versus no miscanthus reactions 0.857 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
+        "# # enzymes with xylan versus no xylan reactions: 1.000 accuracy in grid search\n",
+        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='sgd', shuffle=False)\n",
         "\n",
-        "enzymes with switchgrass versus  no switchgrass reactions:  0.857 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='lbfgs', shuffle=True)\n",
-        "\n",
-        "enzymes with xylan versus no xylan reactions: 1.000 accuracy in grid search\n",
-        "classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(10,10), learning_rate='constant', max_iter=1000000, solver='sgd', shuffle=False)\n",
-        "\n",
-        "\n",
-        "\n",
-        "# classifier = MLPClassifier(activation='relu', hidden_layer_sizes=(30, 30, 30), learning_rate='adaptive', max_iter=1000000, solver='adam', shuffle=True) # mlp lichenan no lichenan no reaction\n",
-        "# classifier = MLPClassifier(activation='logistic', hidden_layer_sizes=(10,10,), learning_rate='constant', max_iter=10000, solver='lbfgs') # mlp lichenan no reaction\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# classifier = pickle.load(open(mlpFilePath, 'rb'))\n",
-        "# classifier = pickle.load(open(mlp882, 'rb'))\n",
-        "# classifier = SVC(C=5, gamma=0.001, kernel='rbf')\n",
-        "# classifier = KNeighborsClassifier(n_neighbors=14, p=1, weights='distance')\n",
-        "ada = AdaBoostClassifier()\n",
         "mlp = MLPClassifier()\n",
-        "svm = SVC()\n",
-        "neigh = KNeighborsClassifier()\n",
-        "\n",
-        "param_grid = {\"objective\":['multiclass'],\n",
-        "          \"num_class\":[7],\n",
-        "          \"verbosity\":[-1],\n",
-        "          \"learning_rate\" : [0.05],\n",
-        "          \"boosting\" : [\"gbdt\", \"dart\"],\n",
-        "          \"num_leaves\" : [10,25,50],\n",
-        "          \"max_depth\": [-1,3,5,7],\n",
-        "          \"feature_fraction\": [0.8, 1.0],\n",
-        "          \"bagging_fraction\": [0.8, 1.0],\n",
-        "          \"bagging_freq\": [5,10]\n",
-        "}\n",
         "\n",
         "mlp_params = {\n",
         "'learning_rate': [\"constant\", \"adaptive\", \"invscaling\"],\n",
@@ -470,78 +443,19 @@
         "'shuffle': [False, True]\n",
         "}\n",
         "\n",
-        "# mlp_params = {\n",
-        "# 'learning_rate': [\"constant\", \"adaptive\", \"invscaling\"],\n",
-        "# 'hidden_layer_sizes': [(10,10,10),(20,20,20), (30,30,30),(50,50, 50),],\n",
-        "# 'solver': ['lbfgs','sgd', 'adam'],\n",
-        "# 'activation': [\"relu\", \"logistic\", \"tanh\"],\n",
-        "# 'max_iter' : [1000],\n",
-        "# 'shuffle': [False, True]\n",
-        "# }\n",
-        "\n",
-        "ada_params = {\n",
-        "'n_estimators': [10, 50, 90, 100, 150, 200, 250],\n",
-        "'learning_rate': [1, 0.1, 0.5, 2, 3, 4, 5, 10, 15, 20],\n",
-        "'algorithm': ['SAMME', 'SAMME.R']\n",
-        "}\n",
-        "\n",
-        "a_list = list(range(1, 100))\n",
-        "\n",
-        "# mlp_params = {\n",
-        "# 'learning_rate': [\"constant\"],\n",
-        "# 'hidden_layer_sizes': [(10,10,)],\n",
-        "# 'solver': ['lbfgs'],\n",
-        "# 'activation': [\"logistic\"],\n",
-        "# 'max_iter' : [1000],\n",
-        "# 'random_state': a_list\n",
-        "# }\n",
-        "\n",
-        "svm_params = [{'kernel': ['rbf'], 'gamma': [1e-1, 1e-2, 1e-3, 1e-4],\n",
-        "                     'C': [1, 5, 10, 25, 50, 100, 1000]},\n",
-        "                    {'kernel': ['linear'], 'C': [1, 5, 10, 25, 50, 100, 1000]}]\n",
-        "knn_params = {\n",
-        "'weights': [\"uniform\", \"distance\"],\n",
-        "'n_neighbors': [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 19, 20, 25, 35],\n",
-        "'p': [1, 2],\n",
-        "}\n",
-        "\n",
-        "# tuned_params = {\n",
-        "# 'alpha': [0, 0.1, 0.5, 1, 2, 3, 4, 5, 10, 15, 35, 50, 100, 200],\n",
-        "# }\n",
         "\n",
         "gridMLP = GridSearchCV(estimator=mlp, param_grid=mlp_params, scoring='accuracy', verbose=10)\n",
-        "gridAda = GridSearchCV(estimator=ada, param_grid=ada_params, scoring='accuracy', verbose=10)\n",
-        "# gridSVM = GridSearchCV(estimator=svm, param_grid=svm_params, scoring='accuracy', verbose=10)\n",
-        "# gridNeigh = GridSearchCV(estimator=neigh, param_grid=knn_params, scoring='accuracy')\n",
-        "# grid = GridSearchCV(estimator=classifier, param_grid=tuned_params, scoring='accuracy', verbose = 10)\n",
-        "# grid = GridSearchCV(estimator=classifier, param_grid=tuned_params, scoring='accuracy', verbose = 10)\n",
         "\n",
-        "# fits\n",
+        "\n",
+        "# Uncomment below to run a MLP grid search on the current dataset. \n",
+        "# Gridsearch accuracy is based on Training dataset only.\n",
+        "# WARNING This will take 1 - 2 to run uunder current parameter grid.\n",
+        "\n",
         "\n",
         "# gridMLP.fit(X_train, y_train)\n",
-        "# gridAda.fit(X_train, y_train)\n",
-        "# gridSVM.fit(X_train, y_train)\n",
-        "# gridNeigh.fit(X_train, y_train)\n",
-        "# grid.fit(X_train, y_train)\n",
-        "\n",
         "# print('Best mlp')\n",
         "# print('Best parameters found:\\n', gridMLP.best_params_)\n",
         "# print(\"Best score: \",gridMLP.best_score_)\n",
-        "\n",
-        "# print('Best svm')\n",
-        "# print('Best parameters found:\\n', gridSVM.best_params_)\n",
-        "# print(\"Best score: \",gridSVM.best_score_)\n",
-        "\n",
-        "# print('Best ada')\n",
-        "# print('Best parameters found:\\n', gridAda.best_params_)\n",
-        "# print(\"Best score: \",gridAda.best_score_)\n",
-        "\n",
-        "# print('Best knn')\n",
-        "# print('Best parameters found:\\n', gridNeigh.best_params_)\n",
-        "# print(\"Best score: \",gridNeigh.best_score_)\n",
-        "# print('Best parameters found:\\n', grid.best_params_)\n",
-        "# print(\"Best score: \",grid.best_score_)\n",
-        "\n",
         "\n",
         "classifier.fit(X_train, y_train)"
       ],
@@ -578,6 +492,7 @@
         "outputId": "a3391d69-769e-4255-c887-c99b18e00dab"
       },
       "source": [
+        "# The code below loops until a MLP classifier is found with > 90 % accuracy on the testing dataset.\n",
         "\n",
         "y_pred = classifier.predict(X_test)\n",
         "print(y_test)\n",
